package com.minacontrol.nomina.enums;

public enum EstadoPeriodo {
    ABIERTO,
    CALCULADO,
    PAGADO,
    CERRADO
}
