package com.minacontrol.reportes.enums;

public enum TipoReporte {
    PRODUCCION,
    ASISTENCIA,
    COSTOS_LABORALES,
    OPERACIONAL
}
