package com.minacontrol.empleado.enums;

public enum RolSistema {
    EMPLEADO,
    ADMINISTRADOR,
    SUPERVISOR
}
